# verdi

./: .gitignore  .hook.yaml  .travis-ci.sh  .travis.yml  HandlerMonad.v  InverseTraceRelations.v  LICENSE  LockServ.v  Makefile  Makefile.detect-coq-version  Net.v  PROOF_ENGINEERING.md  PrimaryBackup.v  PrimaryBackupVNL.v  README.md  STYLE.md  SeqNum.v  SeqNumCorrect.v  StateMachineHandlerMonad.v  TraceRelations.v  UpdateLemmas.v  Util.v  Vagrantfile  VarD.v  VarDPBJ.v  VarDPrimaryBackup.v  VerdiTactics.v  _CoqProject  analytics.sh  build.sh  configure  coq-verdi.opam  descr  dune-project  meta.yml  opam  provision.sh
.travis/: ssh_config  travis_rsa.enc  travis_rsa.pub
core/: DupDropReordering.v  DynamicNet.v  DynamicNetLemmas.v  ExtensionalUpdate.v  GhostSimulations.v  HandlerMonad.v  InverseTraceRelations.v  LabeledDynamicNet.v  LabeledNet.v  Makefile  NameOverlay.v  Net.v  PartialExtendedMapSimulations.v  PartialMapExecutionSimulations.v  PartialMapSimulations.v  RefinementUpdate.v  SerializableUpgradeNet.v  SimulationUpgrade.v  Simulations.v  SingleNodeUpdate.v  SingleSimulations.v  StateMachineHandlerMonad.v  StateMachineUpgrade.v  StatePacketPacketDecomposition.v  TotalMapExecutionSimulations.v  TotalMapSimulations.v  TraceRelations.v  UpdateLemmas.v  UpgradeNet.v  Util.v  Verdi.v  VerdiHints.v  VerdiTactics.v  VerySimpleSimulationUpgrade.v  infseq.v  infseq_aux.v
dash/: .gitignore  Makefile  admits.css  dash.css  html-admits.sh  index-template.html  mkindex.py  publish.sh
extraction/: ExtrOcamlBasicExt.v  ExtrOcamlBool.v  ExtrOcamlDiskOp.v  ExtrOcamlFin.v  ExtrOcamlFinInt.v  ExtrOcamlList.v  ExtrOcamlNatIntExt.v
lib/: Coqlib.v  ExtrOcamlBasicExt.v  ExtrOcamlBool.v  ExtrOcamlFin.v  FMapVeryWeak.v  Makefile  Maps.v  Ssrexport.v  StringMap.v  StringOrderedTypeCompat.v
proofalytics/: .gitignore  Makefile  admits-links.awk  build-timer.sh  build-times-links.awk  csv-sort.awk  csv-table.awk  mkreport.sh  proof-linter.sh  proof-sizes-links.awk  proof-sizes.awk  proof-time-annot.awk  proof-timer.sh  proof-times-csv.awk  proofalytics.sh  publish.sh  style.css  template.html  timestamp-lines.awk  timestamp-lines.c
raft-proof/: EveryEntryWasCreatedProof.v  LeaderLogsCandidateEntriesProof.v  OutputGreatestIdProof.v  SortedProof.v  StateMachineSafetyProof.v
raft-proofs/: .dir-locals.el  AllEntriesCandidateEntriesProof.v  AllEntriesIndicesGt0Proof.v  AllEntriesLeaderLogsProof.v  AllEntriesLeaderLogsTermProof.v  AllEntriesLeaderSublogProof.v  AllEntriesLogMatchingProof.v  AllEntriesLogProof.v  AllEntriesTermSanityProof.v  AllEntriesVotesWithLogProof.v  AppendEntriesLeaderProof.v  AppendEntriesReplySublogProof.v  AppendEntriesRequestLeaderLogsProof.v  AppendEntriesRequestReplyCorrespondenceProof.v  AppendEntriesRequestReplyRefinedCorrespondenceProof.v  AppendEntriesRequestTermSanityProof.v  (+77 more)
(+320 files in other folders)
